[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/SceneController.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Character1" parent="." groups=["Characters"] instance=ExtResource( 1 )]
position = Vector2( 69, 95 )

[node name="Character2" parent="." groups=["Characters"] instance=ExtResource( 1 )]
position = Vector2( 70, 207 )

[node name="Character3" parent="." groups=["Characters"] instance=ExtResource( 1 )]
position = Vector2( 67, 337 )

[node name="EndTurn" type="AspectRatioContainer" parent="."]
visible = false
anchor_top = 0.85
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -20.0
ratio = 2.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="EndTurnButton" type="Button" parent="EndTurn"]
margin_left = 402.0
margin_right = 622.0
margin_bottom = 110.0
text = "End Turn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AcceptPathMenu" type="HBoxContainer" parent="."]
visible = false
anchor_top = 0.85
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -20.0
mouse_filter = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChooseChar" type="Button" parent="AcceptPathMenu"]
margin_right = 338.0
margin_bottom = 110.0
size_flags_horizontal = 3
text = "Choose Different Character"

[node name="NewPath" type="Button" parent="AcceptPathMenu"]
margin_left = 342.0
margin_right = 681.0
margin_bottom = 110.0
size_flags_horizontal = 3
text = "Go Back One Step"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AcceptPath" type="Button" parent="AcceptPathMenu"]
margin_left = 685.0
margin_right = 1024.0
margin_bottom = 110.0
size_flags_horizontal = 3
text = "Accept Current Path"

[node name="ActionsMenu" type="VBoxContainer" parent="."]
visible = false
anchor_top = 0.25
anchor_bottom = 0.75
margin_top = -20.0
margin_right = 40.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="ActionsMenu"]
margin_right = 108.0
margin_bottom = 110.0
size_flags_vertical = 3
text = "Hammer Swing"

[node name="Button2" type="Button" parent="ActionsMenu"]
margin_top = 114.0
margin_right = 108.0
margin_bottom = 225.0
size_flags_vertical = 3
text = "Single Snipe"

[node name="Button3" type="Button" parent="ActionsMenu"]
margin_top = 229.0
margin_right = 108.0
margin_bottom = 340.0
size_flags_vertical = 3
text = "Triple Shot"

[connection signal="mouse_entered" from="Character1" to="." method="_on_Character1_mouse_entered"]
[connection signal="mouse_exited" from="Character1" to="." method="_on_Character1_mouse_exited"]
[connection signal="mouse_entered" from="Character2" to="." method="_on_Character2_mouse_entered"]
[connection signal="mouse_exited" from="Character2" to="." method="_on_Character2_mouse_exited"]
[connection signal="mouse_entered" from="Character3" to="." method="_on_Character3_mouse_entered"]
[connection signal="mouse_exited" from="Character3" to="." method="_on_Character3_mouse_exited"]
[connection signal="button_up" from="EndTurn/EndTurnButton" to="." method="_on_EndTurnButton_button_up"]
[connection signal="button_up" from="AcceptPathMenu/ChooseChar" to="." method="_on_ChooseChar_button_up"]
[connection signal="button_up" from="AcceptPathMenu/NewPath" to="." method="_on_NewPath_button_up"]
[connection signal="button_up" from="AcceptPathMenu/AcceptPath" to="." method="_on_AcceptPath_button_up"]
